# portfolio-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  EVALUATION_REPORT.md  README.md  clusterrole-gitops-convergence-checker.yaml  clusterrolebinding-gitops-convergence-checker.yaml  dev-httproute-web-app-active.yaml  dev-httproute-web-app-preview.yaml  dev-rollout-web-app.yaml  dev-service-web-app-active.yaml  dev-service-web-app-preview.yaml  kargo-shared-resources-role-gitops-convergence-checker-cluster-identity.yaml  kargo-shared-resources-rolebinding-gitops-convergence-checker-cluster-identity.yaml  mise.toml  nx.json  observability-deployment-gitops-convergence-checker.yaml  observability-role-gitops-convergence-checker-heartbeat.yaml  observability-rolebinding-gitops-convergence-checker-heartbeat.yaml  package.json  prd-httproute-web-app-active.yaml  prd-httproute-web-app-preview.yaml  prd-rollout-web-app.yaml  prd-service-web-app-active.yaml  prd-service-web-app-preview.yaml  stg-httproute-web-app-active.yaml  stg-httproute-web-app-preview.yaml  stg-rollout-web-app.yaml  stg-service-web-app-active.yaml  stg-service-web-app-preview.yaml
.claude/: settings.json
.claude/agents/: commit-explorer-missing.md  commit-explorer-truthfulness.md  commit-judge-codex.md  commit-judge-opus.md
.claude/hooks/: AGENTS.md  hook-dispatcher.sh
.claude/skills/: app-troubleshooting  argocd-troubleshooting  before-writing-a-plan  cluster-troubleshooting  feature-charter  git-vs-plan-drift-check  intermediate-commits  kargo-troubleshooting  plan-creation  pr-verification  verification-feedback-loop  worktree-create
.claude/workflows/: implement-verify-loop.js
.github/: CODEOWNERS
.pre-commit-scripts/: check-absolute-symlinks  check-cnpg-service-database-inventory  check-permanent-history-artefacts  lint-python-projects  nx-affected-lint
apps/platform/convergence-checker/: Dockerfile  project.json  pyproject.toml  settings.toml
apps/platform/convergence-checker/src/convergence_checker/: __main__.py  application.py  cli.py  config.py  cycle.py  domain.py  evaluator.py  github_client.py  github_repository.py  io_adapters.py  k8s_client.py  loop.py  models.py
apps/platform/convergence-checker/src/convergence_checker/core/: cycle.py  evaluator.py  models.py  ports.py
apps/platform/convergence-checker/src/convergence_checker/infrastructure/: bootstrap.py  cli.py  config.py  github.py  kubernetes.py  runner.py
apps/platform/convergence-checker/src/convergence_checker/infrastructure/github/: adapters.py  repository.py
apps/platform/convergence-checker/src/convergence_checker/infrastructure/kubernetes/: adapters.py  repository.py
apps/platform/convergence-checker/tests/: conftest.py  factories.py  test_adapters.py  test_application.py  test_bootstrap.py  test_cli.py  test_config.py  test_cycle.py  test_domain.py  test_evaluator.py  test_github.py  test_github_app_token_provider.py  test_github_client.py  test_github_repository.py  test_io_adapters.py  test_k8s_client.py  test_k8s_repository.py  test_kubernetes.py  test_loop.py  test_models.py  test_run_until.py
apps/platform/convergence-checker/tests/integration/: test_kmock_failure.py
docs/: AGENT_OPERATING_POLICIES.md  CODE_DESIGN_PRINCIPLES.md  PROJECT_POLICIES.md  WORKING_PRINCIPLES.md  convergence-checker-spec.md
gitops/: project.json
scripts/: check-kargo-compatibility.sh
tools/k8s-validation/: project.json  pyproject.toml  settings.yaml
tools/k8s-validation/src/k8s_validator/: cache.py  config.py  discovery.py  rendering.py  schemas.py
tools/k8s-validation/tests/: test_kubeconform.py  test_kyverno.py
tools/k8s-validation/validators/: conftest.py  kubeconform_validator.py  kyverno_validator.py  render_secrets_validator.py  rendered_conftest_validator.py  service_database_validator.py
(+336 files in other folders)
